<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Moderacion15M</string>
    <string name="hello_world">Participant</string>

    <!-- > Main Activity <! -->
    <string name="title_activity_main">Configuration</string>
    <string name="main_explanation">Choose the number of columns and the total number of participants</string>
    <string name="main_num_columns">Number of columns</string>
    <string name="main_num_participants">Number of participants</string>
    <string name="main_button_create">Create circle</string>
    <string name="main_activity_incorrect_params">The circle could not be created because the minimum number of participants is four</string>
    <string name="main_maximum_time_intervention">Maximum number of minutes of each intervention</string>
    <string name="main_total_time_debate">Duration of the debate (minutes)</string>

    <!-- > Popup Participant <! -->
    <string name="participant_popup_title">Participant statistics</string>
    <string name="participant_popup_change_name">Change name</string>
    <string name="participant_popup_cancel">Cancel</string>
    <string name="participant_popup_numInterventions_tag">Number of interventions</string>
    <string name="participant_popup_timeInterventions_tag">Time of interventions</string>

    <!-- > Results Activity <! -->
    <string name="title_activity_results">Results</string>
    <string name="results_name">Name</string>

    <!-- > Menu <! -->
    <string name="action_order_by_time">By time</string>
    <string name="action_order_by_interventions">By Interventions</string>
    <string name="action_order_alphabetically">Alphabetically</string>
    <string name="action_generate_file">Generate file</string>
    <string name="action_add_participant">Add participant</string>

  <string name="hello_blank_fragment">Hello blank fragment</string>

  <!-- > Moderation Activity Toasts <! -->
  <string name="moderation_toast_remaining_debate_time">" remaining to the end of the debate"</string>
  <string name="moderation_toast_intervention_time_ended">The time for the intervention of the participant ended</string>
  <string name="moderation_toast_debate_time_ended">The time for the debate ended</string>
  <string name="moderation_toast_debate_timer_start">The timer for the debate starts</string>
  <string name="moderation_toast_assign_turn_to_participant">"Assign the speaking turn to "</string>
  <string name="moderation_toast_participant_finished_intervention">" finished their intervention"</string>
  <plurals name="moderation_toast_participant_added_to_queue">
    <item quantity="one">" added to the waiting list. Their had %d person ahead"</item>
    <item quantity="other">" added to the waiting list. Their had %d persons ahead"</item>
  </plurals>
  <plurals name="moderation_toast_remove_participant_from_queue">
    <item quantity="one">" removed from the waiting list. There is %d person waiting"</item>
    <item quantity="other">" removed from the waiting list. There are %d persons waiting"</item>
  </plurals>


  <!-- Moderation Showcases -->
  <string name="moderation_showcase_moderator_title">\n\n\n\nStart the debate</string>
  <string name="moderation_showcase_moderator_text">Click on the moderator to start the timer of the debate.
    \nClick again to see the remaining time.\nWhen the time for the debate has ended, click to see the results.</string>
  <string name="moderation_showcase_participant_title">\n\n\n\nAssign turns</string>
  <string name="moderation_showcase_participant_text">Click on a participant to assign the turn or put their in the waiting list.
      \nLong click to remove the participant from the speaking turn or from the waiting list.
      \nDouble click to change the name and see the statistics.</string>

</resources>