<menu xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  tools:context="com.alvarosantisteban.moderacion15m.ResultsActivity">

  <item
    android:id="@+id/action_generate_file"
    android:title="@string/action_generate_file"
    android:orderInCategory="100"
    android:icon="@drawable/ic_action_save"
    app:showAsAction="always" />
  <item
    android:id="@+id/action_order_by_time"
    android:title="@string/action_order_by_time"
    android:orderInCategory="101"
    app:showAsAction="ifRoom" />
  <item
    android:id="@+id/action_order_by_interventions"
    android:title="@string/action_order_by_interventions"
    android:orderInCategory="102"
    app:showAsAction="ifRoom" />
  <item
    android:id="@+id/action_order_alphabetically"
    android:title="@string/action_order_alphabetically"
    android:orderInCategory="103"
    app:showAsAction="ifRoom" />
</menu>
