<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:paddingLeft="@dimen/activity_horizontal_margin"
  android:paddingRight="@dimen/activity_horizontal_margin"
  android:paddingTop="@dimen/activity_vertical_margin"
  android:paddingBottom="@dimen/activity_vertical_margin"
  tools:context="com.alvarosantisteban.moderacion15m.ResultsActivity">

  <LinearLayout
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
      style="@style/TextResultStatistic"
      android:layout_marginTop="@dimen/results_padding_top"
      android:layout_marginBottom="@dimen/results_padding_top"
      android:textSize="@dimen/results_text_size"
      android:textStyle="bold"
      android:background="@android:color/darker_gray"
      android:text="@string/results_name" />

    <TextView
      style="@style/TextResultStatistic"
      android:layout_marginTop="@dimen/results_padding_top"
      android:layout_marginBottom="@dimen/results_padding_top"
      android:textSize="@dimen/results_text_size"
      android:background="@android:color/darker_gray"
      android:text="@string/participant_popup_numInterventions_tag" />

    <TextView
      style="@style/TextResultStatistic"
      android:layout_marginTop="@dimen/results_padding_top"
      android:layout_marginBottom="@dimen/results_padding_top"
      android:textSize="@dimen/results_text_size"
      android:background="@android:color/darker_gray"
      android:text="@string/participant_popup_timeInterventions_tag" />
  </LinearLayout>

  <ListView
    android:id="@+id/results_list"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:listitem="@layout/list_item_results">
    </ListView>
</LinearLayout>
